new route: SearchPostsByTags
